# Tactus

./: .gitignore  AGENTS.md  BDD_COMPLETE_SUMMARY.md  CHANGELOG.md  DEPENDENCIES_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SPECIFICATION.md  SPEC_MISMATCHES.md  TEST_FIXES_SUMMARY.md  pyproject.toml
.github/workflows/: release.yml
docs/: BDD_TESTING.md
examples/: 06-basics-streaming.tac  14-feature-per-turn-tools.tac  15-feature-local-tools.tac  18-feature-lua-tools-individual.tac  18-feature-lua-tools-inline.tac  18-feature-lua-tools-toolset.tac  README.md  hello-world.tyml  mock-config.json  multi-model.tyml  simple-agent.tyml  state-management.tyml  with-parameters.tyml
examples/models/: create_sentiment_model.py
examples/tools/: calculations.py  data_analysis.py  search.py
examples/with_dependencies/: simple_http_test.tac  time_lookup.tac
features/: 17_lua_dsl_validation.feature  18_example_procedures.feature  19_ide_server.feature  20_parameters.feature  21_outputs.feature  23_prompts.feature  24_bdd_specifications.feature  25_bdd_custom_steps.feature  32_result_object.feature  33_output_type.feature
features/documentation/: IDE_SERVER_BEHAVIOR.md
features/steps/: agent_primitives_steps.py  checkpointing_steps.py  control_flow_steps.py  example_procedures_steps.py  file_operations_steps.py  human_in_the_loop_steps.py  ide_server_steps.py  json_operations_steps.py  logging_steps.py  lua_dsl_validation_steps.py  lua_integration_steps.py  procedure_calls_steps.py  result_and_output_steps.py  retry_logic_steps.py  session_management_steps.py  stage_tracking_steps.py  state_management_steps.py  storage_backend_steps.py  tool_integration_steps.py  workflow_execution_steps.py
tactus/: __init__.py
tactus-desktop/: RUN_ELECTRON.md  package.json
tactus-desktop/backend/: tactus_backend.spec
tactus-desktop/preload/: tsconfig.json
tactus-desktop/scripts/: build-backend.js
tactus-desktop/src/: backend-manager.ts  menu.ts
tactus-ide/: ARCHITECTURE.md  CHANGELOG.md  CHANGES_SUMMARY.txt  CLI_COMMAND.md  DEV_MODE.md  FINAL_STATUS.md  FIXES.md  FIXES_APPLIED.md  GETTING_STARTED.md  IDE_OVERHAUL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RESTART_INSTRUCTIONS.md  SUMMARY.md  TROUBLESHOOTING.md  dev.sh  package.json  start-dev.sh
tactus-ide/backend/: README.md  app.py  app_simple.py  events.py  logging_capture.py  (+4 more)
tests/: conftest.py  test_mcp_integration.py
(+148 files in other folders)
